# neural_network_optimization

./: .gitignore  README.md  main.py  main_genetic.py  pyproject.toml  requirements.txt
src/: cli.py  genetic_hyperparameters.py  load_data.py  mlp.py
src/data/: load_data.py
src/models/: mlp.py
