[tool.poetry]
name = "neural-net-optimization"
version = "0.1.0"
description = "A project comparing gradient-based and black-box optimization algorithms for neural network training."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21"
pandas = "^1.3"
scikit-learn = "^0.24"
matplotlib = "^3.4"
deap = "^1.3"
torch = "^1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"